# noggit3

./: .hgignore  .hgtags  CMakeLists.txt  CMakeLists.txt.orig  CONTRIBUTORS  Doxyfile  NoggitTodo.txt  README  README.md  Scripting.md  Todo1.3.txt  readme.md  todo_1.3.md  todo_1.4.md  uid_fix_concept.md
.github/workflows/: cmake.yml
cmake/: FindGLEW.cmake  FindStormLib.cmake  Findstorm.cmake  Findstormlib.cmake  GenerateRevision.cmake  add_compiler_flag_if_supported.cmake  apple_pack.cmake  apple_postfind.cmake  apple_prefind.cmake  force_update.cmake  linux_pack.cmake  linux_postfind.cmake  linux_prefind.cmake  revision.h.in  revision.h.in.cmake  win32_pack.cmake  win32_postfind.cmake  win32_prefind.cmake
etc/: noggit.conf  random_changes_for_mop.diff  some_changes_for_cataclysm.diff  some_experimental_changes_going_to_qt.diff  todo_1.4.md  uid_fix_concept.md
include/: utf8.h
include/osx/: SDLMain.m
include/win/: StackWalker.cpp  StackWalker.h
media/: Info.plist  noggit.icns  noggit.rc  res.rc
misc/: noggit todos  noggit todos.txt
misc/lua_brushes/: CMakeLists.txt  lua_brush_test.cpp
resources/: resources.qrc
scripts/: clean.lua  global.d.ts  height_noise.das  height_noise.lua  hello_world.das  image_brush.lua  prop_placer.lua  texture_brush.lua  texture_printer.lua  tsconfig.json
scripts/docs/: README.md
scripts/docs/api/: modules.md
sql/: Noggit.sql
src/: Alphamap.cpp  Alphamap.h  Animated.h  AppState.h  AsyncLoader.cpp  AsyncLoader.h  AsyncObject.h  Brush.cpp  Brush.h  ChunkWater.cpp  ChunkWater.h  ConfigFile.cpp  ConfigFile.h  DBC.cpp  DBC.h  DBCFile.cpp  DBCFile.h  Directory.cpp  Directory.h  Environment.cpp  Environment.h  FreeType.cpp  FreeType.h  Frustum.cpp  Frustum.h  Gui.cpp  Gui.h  Icon.cpp  Icon.h  Liquid.cpp  Liquid.h  Log.cpp  Log.h  MPQ.cpp  MPQ.h  Makefile  Manager.h  MapChunk.cpp  MapChunk.h  MapHeaders.h  (+254 more)
src/das/: AnnotationArgument.hpp  Context.fwd.hpp  Context.hpp  FsFileAccess.hpp  ManagedStructureAnnotation.hpp  SimNode_ExtFuncCallAndCopyOrMove.hpp  TextPrinter.hpp  Type.hpp  addExtern.hpp  cast.hpp  make_smart.hpp  need_module.hpp
src/das/detail/: include_ast_h.hpp  include_ast_handle_h.hpp  include_ast_interop_h.hpp
src/glsl/: cursor_vert.glsl  horizon_frag.glsl  horizon_vert.glsl  liquid_frag.glsl  liquid_vert.glsl  m2_box_frag.glsl  m2_box_vert.glsl  m2_frag.glsl  m2_vert.glsl  mfbo_vert.glsl  particle_frag.glsl  particle_vert.glsl  ribbon_frag.glsl  ribbon_vert.glsl  terrain_frag.glsl  terrain_vert.glsl  wmo_frag.glsl  wmo_vert.glsl
src/helper/: repository.h.in
src/helper/math/: bounded_nearest.h  random.h
src/helper/qt/: case_insensitive.cpp  case_insensitive.h  non_recursive_filter_model.cpp  non_recursive_filter_model.h  signal_blocker.h
src/libworld/: Buffer.cpp  Buffer.h  Chunk.cpp  Chunk.h  MVER.cpp  MVER.h  SMem.h  WoWFile.cpp  WoWFile.h  trace.cpp  trace.h
src/libworld/adtlib/: ADT.cpp  ADT.h  MCIN.cpp  MCIN.h  MCNK.cpp  MCNK.h  MDDF.cpp  MDDF.h  MHDR.cpp  MHDR.h  MMDX.cpp  MMDX.h  MMID.cpp  MMID.h  MODF.cpp  MODF.h  MTEX.cpp  MTEX.h  MWID.cpp  MWID.h  MWMO.cpp  MWMO.h  mapheaders.h
src/libworld/wdllib/: MAHO.cpp  MAHO.h  MAOF.cpp  MAOF.h  MARE.cpp  MARE.h  WDL.cpp  WDL.h
src/libworld/wdtlib/: MAIN.cpp  MAIN.h  MPHD.cpp  MPHD.h  WDT.cpp  WDT.h
src/math/: bounded_nearest.h  bounding_box.cpp  bounding_box.hpp  constants.h  constants.hpp  frustum.cpp  frustum.hpp  interpolation.h  interpolation.hpp  matrix_4x4.cpp  matrix_4x4.h  matrix_4x4.hpp  projection.hpp  quaternion.h  quaternion.hpp  random.h  ray.cpp  ray.hpp  trig.hpp  vector_2d.cpp  vector_2d.h  vector_2d.hpp  vector_3d.h  vector_3d.hpp  vector_4d.h  vector_4d.hpp
src/mysql/: mysql.cpp  mysql.h
src/noggit/: Alphamap.cpp  Animated.h  AppState.h  AsyncLoader.cpp  AsyncLoader.h  AsyncObject.h  Brush.cpp  Brush.h  ChunkWater.cpp  ChunkWater.hpp  ConfigFile.cpp  ConfigFile.h  DBC.cpp  DBC.h  DBCFile.cpp  DBCFile.h  DBCTableModel.cpp  DBCTableModel.h  Directory.cpp  Directory.h  Environment.cpp  Environment.h  FreeType.cpp  FreeType.h  Frustum.cpp  Frustum.h  Liquid.cpp  Liquid.h  Log.cpp  Log.h  MPQ.cpp  MPQ.h  MacDialog.hpp  MacDialog.mm  MainWindow.cpp  MainWindow.h  Manager.h  MapChunk.cpp  MapChunk.h  MapHeaders.h  (+195 more)
src/noggit/async/: loader.cpp  loader.h  loading_thread.cpp  loading_thread.h  object.h
src/noggit/mpq/: archive.cpp  archive.h  archive_manager.cpp  archive_manager.h  file.cpp  file.h
src/noggit/scripting/: global.d.ts  lua_function.hpp  script.cpp  script.h  script_brush.cpp  script_brush.hpp  script_brush_old.cpp  script_brush_old.hpp  script_chunk.cpp  script_chunk.hpp  script_click_event.cpp  script_click_event.hpp  script_context-registry.ipp  script_context.cpp  script_context.hpp  script_ctx-registry.ipp  script_ctx.cpp  script_ctx.hpp  script_exception.cpp  script_exception.hpp  script_filesystem.cpp  script_filesystem.hpp  script_global.cpp  script_global.hpp  script_heap.cpp  script_heap.hpp  script_image.cpp  script_image.hpp  script_include.hpp  script_loader-noggit_module.ipp  script_loader-number_hack.ipp  script_loader.cpp  script_loader.hpp  script_math.cpp  script_math.hpp  script_misc.cpp  script_misc.hpp  script_model.cpp  script_model.hpp  script_noggit_module.hpp  (+35 more)
src/noggit/ui/: About.cpp  About.h  Alphamap.cpp  Alphamap.h  AppInfo.cpp  AppInfo.h  Button.cpp  Button.h  CapsWarning.cpp  Frame.h  (+137 more)
src/opengl/: call_list.cpp  call_list.h  call_list.hpp  context.cpp  context.h  context.hpp  delayed.hpp  matrix.h  matrix.hpp  primitives.cpp  primitives.h  primitives.hpp  scoped.h  scoped.hpp  scoped.ipp  settings_saver.cpp  settings_saver.h  shader.cpp  shader.fwd.hpp  shader.hpp  texture.cpp  texture.h  texture.hpp  types.h  types.hpp
src/ui/: about_widget.cpp  help_widget.cpp  help_widget.h  minimap_widget.cpp
src/util/: exception_to_string.cpp  exception_to_string.hpp  sExtendableArray.cpp  sExtendableArray.hpp  sExtendableArray.ipp  visit.hpp  visit.ipp
src/windows/: StackWalker.cpp  StackWalker.h
test/math/: matrix_4x4.cpp  trig.cpp  vector_2d.cpp
translations/: noggit_cz.ts  noggit_de.ts
(+32 files in other folders)
